# Lumenpulse

./: .gitignore  lumenpulse-grafana-dashboard.json
apps/backend/src/: app.module.ts
apps/backend/src/analytics/: analytics.controller.ts  analytics.module.ts  analytics.service.spec.ts  analytics.service.ts
apps/backend/src/analytics/dto/: chart-data.dto.ts
apps/backend/src/metrics/: metrics.interceptor.ts  metrics.module.ts  metrics.service.spec.ts  metrics.service.ts
apps/data-processing/: .env.example  API_SECURITY_GUIDE.md  API_SECURITY_QUICK_REF.md  requirements.txt  start_api.py  test_security.py
apps/data-processing/src/: security.py
apps/data-processing/src/api/: server.py
apps/mobile/app/(tabs)/: _layout.tsx  discover.tsx
apps/mobile/lib/: api.ts
apps/onchain/: Cargo.toml
apps/onchain/contracts/contributor_registry/: Cargo.toml
apps/onchain/contracts/contributor_registry/src/: lib.rs
apps/onchain/contracts/crowdfund_vault/: Cargo.toml
apps/onchain/contracts/crowdfund_vault/src/: events.rs  lib.rs  storage.rs  test.rs  test_yield.rs  yield_provider.rs
apps/onchain/contracts/crowdfund_vault/test_snapshots/test/: test_fee_configuration.1.json  test_withdraw_with_fee.1.json
apps/onchain/contracts/notification_interface/: Cargo.toml
apps/onchain/contracts/notification_interface/src/: lib.rs
apps/onchain/contracts/tests/: Cargo.toml
apps/onchain/contracts/tests/src/: lib.rs
