[workspace]
resolver = "2"
members = [
  "contracts/contributor_registry",
  "contracts/crowdfund_vault",
  "contracts/lumen_token",
  "contracts/notification_interface",
  "contracts/upgradable-contract",
  "contracts/vesting-wallet",
]
exclude = ["contracts/tests"]

[workspace.dependencies]
soroban-sdk = "23"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
