[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
soroban-sdk = { version = "23", features = ["testutils"] }

lumen_token = { path = "../lumen_token", features = ["testutils"] }
contributor_registry = { path = "../contributor_registry", features = ["testutils"] }
crowdfund_vault = { path = "../crowdfund_vault", features = ["testutils"] }
notification_interface = { path = "../notification_interface" }